--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="layercheck" checked>
             <label class="form-check-label" for="flexCheckChecked">
-                Layer
+                Neighbourhood
             </label>
         </div>
 
