--- a/index.html
+++ b/index.html
@@ -28,41 +28,41 @@
     <div id='map' class='map'></div>
 
 
-    <!-- NAVIGATION ELEMENTS -->
+    <!-- NAVIGATION: GEOCODER SEARCH BAR AND RETURN BUTTON -->
     <div class='map-overlay-search'>
-        <label>Search for location</label>
-        <div id="geocoder" class="geocoder"></div>
+        <label>Search for location</label> <!-- sets the text above the search box -->
+        <div id="geocoder" class="geocoder"></div> <!-- creates a class to format the geocoder in CSS -->
         <button type="button" class="btn btn-primary btn-sm" id="returnbutton">Return to full extent</button>
     </div>
 
-    <!-- INTERACTIVITY -->
-    <div class='map-overlay-data'>
+    <!-- MAP OVERLAY (FOR INTERACTIVE FEATURES) -->
+    <div class='map-overlay-data'> <!-- this div class creates an overlay/background to place features on top of -->
         <label>Filter map view</label>
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="legendcheck">
-            <label class="form-check-label" for="flexCheckDefault">
+        <div class="form-check"> <!-- When checked, it makes the legend visible -->
+            <input class="form-check-input" type="checkbox" value="" id="legendcheck"> <!-- By default, legend if hidden (unchecked) -->
+            <label class="form-check-label" for="flexCheckDefault"> 
                 Legend
             </label>
 
         </div>
-
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="layercheck" checked>
+ <!-- FILTER FEATURES (INTERACTIVE CHECKBOXES) -->
+        <div class="form-check"> <!-- Allows users to view or remove the neighbourhood data to see only cafe locations -->
+            <input class="form-check-input" type="checkbox" value="" id="layercheck" checked> <!-- Default is set to checked (neighbourhoods show by default) -->
             <label class="form-check-label" for="flexCheckChecked">
-                Neighbourhood
+                Neighbourhood 
             </label>
         </div>
 
     </div>
 
-
     <!-- LEGEND -->
     <div id='legend' class='legend'>
-        <h4></h4>
-        <!-- Conents of legend will now be added here -->
+        <h4></h4> <!-- This will add a header to the legend. I do not have one now; it is obvious it is a legend without one.
+            However, as this map evolves for my final project, I may wish to add a header, so I am keeping this code as a placeholder -->
+        <!-- The legend contents will appear below the header (if one is added) -->
     </div>
 
-
+<!-- JAVASCRIPT -->
     <script src="script.js"></script>
 
 </body>
